# ros_test_ws

./: .gitignore  NOTES.txt
doc/html/: _button_definitions_8h_source.html  _controller_identification_dictionairy_8h_source.html  _converter_8h_source.html  _debugging_8h_source.html  _ex_r_msg_structure_8h_source.html  _ex_r_serial_definitions_8h_source.html  _i_value_limit_exception_8h_source.html  _m_box_band_width_8h_source.html  _m_box_drive_settings_8h_source.html  _m_box_drive_speed_torque_8h_source.html  _m_box_input_voltage_current_8h_source.html  _m_box_mainboard_i_o_info_8h_source.html  _m_box_motherboard_status_8h_source.html  _m_box_speed_ref_8h_source.html  _m_box_temperatures_8h_source.html  _mailbox_8h_source.html  _msg_builder_8h_source.html  _not_implemented_exception_8h_source.html  _payload_8h_source.html  _serial_i_o_controller_8h_source.html  _serial_reader_8h_source.html  _serial_validation_utils_8h_source.html  _serial_writer_8h_source.html  _u_a_r_t_identification_dictionary_8h_source.html  annotated.html  class_controller_identification_dictionairy-members.html  class_controller_identification_dictionairy.html  class_i_value_limit_exception-members.html  class_i_value_limit_exception.html  class_i_value_limit_exception__coll__graph.dot  class_i_value_limit_exception__inherit__graph.dot  class_m_box_band_width-members.html  class_m_box_band_width.html  class_m_box_band_width__coll__graph.dot  class_m_box_band_width_a0c8e636551b87e38971bd6b84f0ccef0_icgraph.dot  class_m_box_band_width_ae6e1997596fcc063d587017a9b796103_cgraph.dot  class_m_box_drive_settings-members.html  class_m_box_drive_settings.html  class_m_box_drive_settings__coll__graph.dot  class_m_box_drive_speed_torque-members.html  (+97 more)
doc/wd/: Doxyfile
src/main/: CMakeLists.txt  main.cpp  main_reader.cpp  main_test_1.cpp  main_writer.cpp  package.xml
src/main/include/: ControllerIdentificationDictionairy.h  ControllerIdentificationDictionairy.hpp  Converter.h  ExRDefinitions.h  ExRMsgStructures.h  ExROutput.h  ExROutputStructures.h  IMBoxRead.h  IMBoxWrite.h  Mailbox.h  MsgBuilder.h  Payload.h  SerialIO.h  Tooling.h  UARTIdentificationDictionary.h  UARTIdentificationDictonairy.h  UartProcessor.h  button_definitions.h  converter.h  debugging_tools.h  exr_definitions.h  msgbuilder.h  payload.h  serialio.h  tooling.h  tools.h
src/main/include/exceptions/: IValueLimitException.h  NotImplementedException.h  ROSException.h
src/main/include/mailboxes/: MBoxBandWidth.h  MBoxDriveSettings.h  MBoxDriveSpeedTorque.h  MBoxInputVoltageCurrent.h  MBoxMainboardIOInfo.h  MBoxMainboardInfo.h  MBoxMotherboardStatus.h  MBoxSpeedRef.h  MBoxTemperatures.h
src/main/include/outputs/: OutputMainboardInfo.h
src/main/include/serial/: ExRSerialDefinitions.h  SerialIOController.h  SerialReader.h  SerialValidationUtils.h  SerialWriter.h
src/main/src/: ControllerIdentificationDictionairy.cpp  Converter.cpp  Debugging.cpp  ExROutput.cpp  MsgBuilder.cpp  Payload.cpp  ROSException.cpp  SerialIO.cpp  Tooling.cpp  UARTIdentificationDictonairy.cpp  UartProcessor.cpp  converter.cpp  debugging_tools.cpp  msgbuilder.cpp  payload.cpp  serialio.cpp  tooling.cpp
src/main/src/mailboxes/: MBoxBandWidth.cpp  MBoxDriveSettings.cpp  MBoxDriveSpeedTorque.cpp  MBoxInputVoltageCurrent.cpp  MBoxMainboardInfo.cpp  MBoxMotherboardStatus.cpp  MBoxSpeedRef.cpp  MBoxTemperatures.cpp
src/main/src/serial/: SerialIOController.cpp  SerialReader.cpp  SerialValidationUtils.cpp  SerialWriter.cpp
src/main_reader/: CMakeLists.txt
src/main_reader/include/: ButtonDefinitions.h  ControllerIdentificationDictionairy.h  Converter.h  ExRMsgStructure.h  Payload.h
src/main_reader/include/mailboxes/: MBoxDriveSettings.h  MBoxDriveSpeedTorque.h  MBoxTemperatures.h
src/main_reader/include/serial/: SerialIOController.h  SerialValidationUtils.h  SerialWriter.h
src/main_reader/src/: Debugging.cpp  MsgBuilder.cpp
src/main_reader/src/mailboxes/: MBoxInputVoltageCurrent.cpp  MBoxMainboardInfo.cpp  MBoxSpeedRef.cpp
src/main_reader/src/serial/: SerialIOController.cpp  SerialWriter.cpp
